# metadecoder-nal

./: .gitignore  CHANGELOG.md  README.md  meta.yaml  pyproject.toml
metadecoder/: __init__.py  coverage_model.py  dirichlet_process_gaussian_mixture.py  kmer_frequency_model.py  metadecoder_cluster.py  metadecoder_coverage.py  metadecoder_seed.py  run_subprocess.py  seed_selection.py
metadecoder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: S1_mapped.sorted.bam.coverage  cmd_metadecoder_seed.sh
test/seed_with_proteins/: output.seed.pyhmmsearch.tsv
test/seed_with_proteins_and_mapping/: output.seed
