[build-system]
requires = ["setuptools >= 70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metadecoder"
version = "1.1.1rc5"
description = "An algorithm for clustering metagenomic sequences"
requires-python = ">=3.8"
license = {text = "GPLv3"}
authors = [{name = "Liucongcong", email = "congcong_liu@icloud.com"}]
maintainers = [{name = "Josh L. Espinoza", email = "jolespin@newatlantis.io"}]
dependencies = [
    "numpy",
    "scipy>=1.0",
    "scikit-learn",
    "threadpoolctl",
    "pyrodigal",
    "pyhmmsearch",
]

[project.urls]
Homepage = "https://github.com/jolespin/metadecoder-nal"

[tool.setuptools.packages.find]
where = ["."]
include = ["metadecoder"]

[tool.setuptools.package-data]
metadecoder = ['LICENSE', 'markers.hmm.gz', 'train/*']

[tool.setuptools]
cmdclass = {"install" = "metadecoder.set_permissions.set_permissions"}

[project.scripts]
metadecoder = "metadecoder:main"
